# build-ecosystem

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
build_ecosystem/: __init__.py
docs/: ENTERPRISE-READINESS.md
docs/brand/: README.md
quanta_ecosystem/: __init__.py
tests/: test_ecosystem.py
