[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-ecosystem"
version = "1.0.0"
description = "Complete Build ecosystem — color science, trading, forecasting, and display calibration"
readme = "README.md"
license = { text = "FSL-1.1-MIT" }
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "build-color>=1.0.0",
    "build-finance>=1.0.0",
    "build-oracle>=1.0.0",
    "build-engine>=1.0.0",
    "calibrate-pro>=1.0.0",
    "build-ui>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/build-ecosystem"
Repository = "https://github.com/HarperZ9/build-ecosystem"
Issues = "https://github.com/HarperZ9/build-ecosystem/issues"

[project.optional-dependencies]
gui = [
    "build-color[gui]",
    "build-finance[gui]",
    "build-oracle[gui]",
    "build-engine[gui]",
    "calibrate-pro[gui]",
]
all = [
    "build-color[all]",
    "build-finance[all]",
    "build-oracle[all]",
    "build-engine[all]",
    "calibrate-pro[all]",
]
test = ["pytest>=8.0", "pytest-cov>=5"]
dev = ["pytest>=8.0", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10", "build>=1.2"]

[tool.setuptools.packages.find]
include = ["build_ecosystem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["build_ecosystem"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["build_ecosystem"]
# The aggregated member packages are optional at type-check time; ignore their imports.
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "I",     # isort
]
ignore = ["E501", "E701", "E702", "E741", "B905", "SIM102", "SIM105", "SIM108", "SIM112", "SIM117", "E402", "SIM113", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional in __init__ files

[tool.ruff.format]
quote-style = "double"
